fix overflow bugs on mobile devices in displaying users

--- a/src/components/headerStyle.css
+++ b/src/components/headerStyle.css
@@ -50,7 +50,7 @@
     width: 4rem;
     height: 100%;
     color: #f6ebff;
-    align-self: center;
+    align-self: flex-end;
     font-size: 1.4rem;
     cursor: pointer;
     transition: 0.7s ease;
@@ -74,6 +74,7 @@
 }
 
 .header-page-title {
+    width: 10rem;
     color: #ffffff;
     text-align: center;
     font-family: 'Times New Roman', Times, serif;
@@ -92,7 +93,7 @@
 
 @media screen and (max-width : 760px) {
     .header-icon {
-        margin-left: 25%;
+        margin-left: 20%;
     }
 }
 
