--- a/src/components/userCardStyle.css
+++ b/src/components/userCardStyle.css
@@ -106,9 +106,4 @@
         width: 12rem;
     }  
 }
-/* @media screen and (max-width:700px) {
-    .card-container{
-        width: 8rem;
-       
-    }  
-} */
+
