--- a/src/pages/user-page-style.css
+++ b/src/pages/user-page-style.css
@@ -9,7 +9,7 @@
     background-position: center;
     background-size: cover;
     padding-top: 10vh;
-    padding-left: 02.3rem;
+    padding-left: 0.3rem;
     justify-content: center;
     column-gap: 3.2rem;
     row-gap: 2.3rem;
